# simdyn

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api_reference.md  conventions.md
docs/systems/: rocket3dof.md  rocket6dof.md
examples/: 01_basic_simulation.py
src/dynasim/: __init__.py  base.py
src/dynasim/integrators/: __init__.py  euler.py
src/dynasim/systems/: __init__.py  cartpole.py  double_integrator.py  pendulum.py  rocket3dof.py  rocket6dof.py  unicycle.py
src/dynasim/utils/: __init__.py  rotations.py
src/simdyn/: __init__.py  base.py
src/simdyn/integrators/: __init__.py  rk4.py
src/simdyn/systems/: __init__.py  cartpole.py  double_integrator.py  pendulum.py  rocket3dof.py  rocket6dof.py  unicycle.py
src/simdyn/utils/: __init__.py  quaternion.py  rotations.py
src/simdyn/visualization/: __init__.py  animate.py  plotters.py
tests/: conftest.py  test_base.py  test_integrators.py  test_rotations.py  test_smoke.py
tests/systems/: test_double_integrator.py  test_rocket3dof.py  test_unicycle.py
