[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dynasim"
version = "0.1.0"
description = "A modular dynamics library for control systems research"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Shiva Shakeri", email = "sshakeri@uw.edu" },
]
keywords = ["dynamics", "control", "robotics", "aerospace", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
viz = [
    "matplotlib>=3.7.0",
]

[project.urls]
Repository = "https://github.com/shiivashaakeri/dynasim"

[tool.hatch.build.targets.wheel]
packages = ["src/dynasim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]